--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>Oden's Recipes</h1>
-    <a href="recipes/fullenglish.html">Full English Breakfast</a>
+    <ul>
+      <li><a href="recipes/fullenglish.html">Full English Breakfast</a></li>
+      <li><a href="recipes/misosoup.html">Miso Noodle Soup in a Jar</a></li>
+      <li>
+        <a href="recipes/gritscasserole.html">Southern Grits Casserole</a>
+      </li>
+    </ul>
   </body>
 </html>
